--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Build Jar
         run: |
-          clj -T:build clean
-          clj -T:build jar
+          clojure -T:build clean
+          clojure -T:build jar
 
       - name: Deploy to Clojars
-        run: env CLOJARS_USERNAME=${{ secrets.CLOJARS_USERNAME }} CLOJARS_PASSWORD=${{ secrets.CLOJARS_PASSWORD }} clj -T:build deploy
+        run: env CLOJARS_USERNAME=${{ secrets.CLOJARS_USERNAME }} CLOJARS_PASSWORD=${{ secrets.CLOJARS_PASSWORD }} clojure -T:build deploy
