--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,3 +25,6 @@ jobs:
 
       - name: Run Unit Tests
         run: clojure -M:test "$@" unit
+
+      - name: Test Resolver
+        run: clojure -M:test "$@" resolver
