create end-to-end test for singular update command

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,3 +28,6 @@ jobs:
 
       - name: Test Resolver
         run: clojure -M:test "$@" resolver
+
+      - name: Run end-to-end tests
+        run: clojure -M:test "$@" e2e
